@startuml

package "GameLogic" {
}

package "Utils" {
    class Image {}
}

note "A trop de dépendances pour tout afficher : \nOn relie donc aux packages concernés" as note_image
note_image .- Image


package "UI" {
    class BackgroundWidgetUI { }
    class CardUI { }
    class GemmesUI { }
    class InformationMessageUI { }
    class PrivilegeBoardUI { }
    class PrivilegeUI { }
    class SingletonSplendorDuel { }
    abstract class CardContainerGUI { }
    abstract class GemmesContainerGUI { }

    package "Board" {
        class BoardCardUI { }
        class BoardUI { }
        class CompleteBoardUI { }
        class PersonnageBoardUI { }
        class RemplirBoardUI { }
    }

    package "Player" {
        class PlayerCardUI { }
        class PlayerGemsUI { }
        class PlayerNameUI { }
        class PlayerPoints { }
        class PlayerUI { }
    }

    package "Menu" {
        class ConfirmationPushButtonUI { }
        class FinPartie { }
        class MenuUI { }
    }
}

CardUI o-- "*" GameLogic.Card

GemmesUI o-- "1" GameLogic.EnumGemmes

PrivilegeBoardUI *-- "*" PrivilegeUI

SingletonSplendorDuel *-- "1" CompleteBoardUI
SingletonSplendorDuel *-- "2" PlayerUI
SingletonSplendorDuel *-- "1" PrivilegeBoardUI
SingletonSplendorDuel *-- "1" InformationMessageUI
SingletonSplendorDuel ..> "1" FinPartie

ConfirmationPushButtonUI <.. FinPartie
ConfirmationPushButtonUI <.. MenuUI

CardContainerGUI <|-- BoardCardUI
CardContainerGUI <|-- PlayerCardUI
CardContainerGUI <|-- PersonnageBoardUI
CardContainerGUI <|-- PlayerPoints

GemmesContainerGUI <|-- BoardUI
GemmesContainerGUI <|-- PlayerGemsUI


BoardCardUI *-- "0..5" CardUI

BoardUI *-- "0..25" GemmesUI

CompleteBoardUI *-- "1" BoardUI
CompleteBoardUI *-- "1" RemplirBoardUI

PersonnageBoardUI *-- "*" CardUI

PlayerCardUI *-- "*" CardUI

PlayerGemsUI *-- "7" GemmesUI

PlayerPoints *-- "3" CardUI
PlayerPoints *-- "1" GameLogic.Player

PlayerUI o-- "1" GameLogic.Player
PlayerUI *-- "1" PlayerPoints
PlayerUI *-- "1" PlayerNameUI
PlayerUI *-- "1" PlayerCardUI
PlayerUI *-- "1" PlayerGemsUI
PlayerUI -|> BackgroundWidgetUI

'Image <.. BoardUI
'Image <.. GemmesUI
'Image <.. CardUI
'Image <.. MenuUI
'Image <.. PlayerCardUI
'Image <.. PlayerGemsUI
'Image <.. PlayerPoints
'Image <.. PrivilegeUI
'Image <.. RemplirBoardUI
'Image <.. SingletonSplendorDuel
Image <.. UI.Board
Image <.. UI.PLayer
Image <.. UI

@enduml